# bpa_rs

./: Cargo.toml  LICENSE  README.md  todo.md
driver/: Cargo.toml  go.sh
driver/src/: main.rs
examples/ply2stl/: Cargo.toml  go.sh
examples/ply2stl/src/: main.rs
examples/xyz2stl/: Cargo.toml  README.md  boolean_pipes.stl  boolean_pipes.xyz  dhat-heap.json  dhat.sh  flamegraph.sh  go.sh
examples/xyz2stl/src/: main.rs
lib/: Cargo.toml  cube_cloud.ply  sphere_100_50_cloud.ply  sphere_36_18_cloud.ply  tetrahedron_cloud.ply
lib/benches/: compute_ball_center.rs  reconstruct.rs
lib/src/: grid.rs  io.rs  lib.rs  mesh.rs
lib/src/bpa/: mod.rs
lib/src/snapshots/: bpa_rs__io__test__parse_ply_header.snap
lib/src/test/: compute_ball_center.rs  mod.rs  reconstruct.rs
lib/src/test/snapshots/: bpa_rs__test__reconstruct__cube.snap  bpa_rs__test__reconstruct__sphere_100_50.snap  bpa_rs__test__reconstruct__sphere_36_18.snap  bpa_rs__test__reconstruct__tetrahedron.snap
ply2stl/: Cargo.toml  README.md  go.sh
ply2stl/src/: main.rs
src/: grid.rs  io.rs  main.rs  mesh.rs  test.rs
src/test/: compute_ball_center.rs  reconstruct.rs
