[workspace]
members = [
  "./lib",
  "./driver"
]
resolver = "2"
default-members = ["./lib"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of the Binary Partitioning Algorithm (BPA) for 3D point cloud data."
license = "MIT"
authors = ["Martin Frances<martinfrances107@hotmail.com>"]



