[workspace]
members = [
  "./lib",
  "./ply2stl"
]
resolver = "2"
default-members = ["./lib"]

[workspace.package]
authors = ["Martin Frances<martinfrances107@hotmail.com>"]
description = "A Rust implementation of the Binary Partitioning Algorithm (BPA) for 3D point cloud data."
categories=["graphics", "mathematics"]
edition = "2024"
keywords = ["implicit","reconstruction", "surface"]
license = "MIT"
repository = "<https://github.com/martinfrances107/bpa_rs.git>"
readme = "./README.md"
version = "0.1.0"