[workspace]
members = [
  "./lib",
  "./examples/xyz2stl"
]
resolver = "2"
default-members = ["./lib"]

[workspace.package]
authors = ["Martin Frances<martinfrances107@hotmail.com>"]
description = "Reconstruct a 3D surface from a point cloud using the Ball Pivoting Algorithm (BPA)."
categories=["graphics", "mathematics"]
edition = "2024"
keywords = ["ply", "3ds", "mesh", "graphics", "surface"]
license = "MIT"
repository = "https://github.com/martinfrances107/bpa_rs.git"
readme = "./README.md"

[profile.release]
debug = true
lto = true
opt-level = 3
