[package]
authors = { workspace = true }
categories = { workspace = true }
description = "A Rust implementation of the Ball Pivot Algorithm (BPA) for 3D point cloud data."
edition = { workspace = true }
keywords = { workspace = true }
name = "bpa_rs"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = "0.1.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.30.2"
log = "0.4.27"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "reconstruct"
harness = false

[[bench]]
name = "compute_ball_center"
harness = false
